--- a/index.html
+++ b/index.html
@@ -47,24 +47,55 @@
         d="M0,192L60,208C120,224,240,256,360,229.3C480,203,600,117,720,106.7C840,96,960,160,1080,165.3C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
       </path>
     </svg>
-    <div class="container-fluid pb-5">
+    <div class="container-fluid">
       <h3 class="my-4">Language de programmation</h3>
       <div class="row">
-        <img src="img/logo/logo-java-medium.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-c-short.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-c#-short.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-html5-medium.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-css3-medium.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-javascript-medium.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-bash-medium.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-git-short.png" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-java-medium.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-c-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-cSharp-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-html-medium.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-css-medium.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-javascript-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-typescript-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-php-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-bash-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-git-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-access-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-mySQL-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-postgreSQL-short.svg" alt="" class="col-auto" height="64px">
       </div>
       <h3 class="my-4">Framework</h3>
       <div class="row">
-        <img src="img/logo/logo-angular-short.png" alt="" class="col-auto" height="64px">
-        <img src="img/logo/logo-laravel-short.png" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-angular-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-laravel-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-symfony-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-spring-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-hibernate-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-bootstrap-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-material-short.svg" alt="" class="col-auto" height="64px">
+      </div>
+      <h3 class="my-4">Logiciel de traitement</h3>
+      <div class="row">
+         <img src="img/logo/logo-googleDrive-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-word-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-powerpoint-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-excel-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-premierPro-short.svg" alt="" class="col-auto" height="64px">
+        <img src="img/logo/logo-photoshop-short.svg" alt="" class="col-auto" height="64px">
       </div>
     </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#dc3545" fill-opacity="1"
+          d="M0,192L60,202.7C120,213,240,235,360,213.3C480,192,600,128,720,117.3C840,107,960,149,1080,138.7C1200,128,1320,64,1380,32L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+        </path>
+      </svg>
+      <div class="container-fluid bg-danger" style="height: 30rem">
+      </div>
+      <svg height="100%" width="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
+        <path
+          d="M 0,400 C 0,400 0,200 0,200 C 104.21052631578951,178.57416267942585 208.42105263157902,157.14832535885168 306,169 C 403.578947368421,180.85167464114832 494.52631578947353,225.98086124401914 585,223 C 675.4736842105265,220.01913875598086 765.4736842105265,168.92822966507177 859,168 C 952.5263157894735,167.07177033492823 1049.578947368421,216.3062200956938 1147,230 C 1244.421052631579,243.6937799043062 1342.2105263157896,221.8468899521531 1440,200 C 1440,200 1440,400 1440,400 Z"
+          stroke="none" stroke-width="0" fill="#dc3545ff" class="transition-all duration-300 ease-in-out delay-150" transform="rotate(-180 720 200)"></path>
+      </svg>
     <div class="container-fluid py-5">
       <div class="row row-cols-3 justify-content-center align-items-center g-5">
         <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
