--- a/index.html
+++ b/index.html
@@ -2,33 +2,52 @@
 <html lang="fr" dir="ltr">
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <title>Alexis De Chiara</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-theme" content="#0d6efd">
+  <meta name="color-scheme" content="light dark">
+  <meta name="author" content="Alexis De Chiara">
+  <meta name="description" content="CV et portfolio en ligne de Alexis De Chiara">
+
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+ 
+  <!-- Load the alternate CSS first ...
+           in this case the Bootstrap-Dark Variant CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.0.2/dist/css/bootstrap-night.min.css" media="(prefers-color-scheme: dark)" rel="stylesheet" id="dark-style">
+  <!-- and then the primary CSS last ...  
+           in this case the (original) Bootstrap Variant CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.0.2/dist/css/bootstrap.min.css" rel="stylesheet" id="light-style">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="style/main.css">
+
+  <script src="js/main.js" defer></script>
+
+  <title>Alexis De Chiara</title>
+  
 </head>
 <body style="overflow-x:hidden">
-  <header class=" mt-2 mb-1 pb-5">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
+  <header class="bg-primary">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-primary" id="navigation">
       <div class="container-fluid">
-        <!--<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation">
-        <span class="navbar-toggler-icon"></span>-->
-        <div class="collapse navbar-collapse justify-content-md-center" id="navigation">
-          <div class="navbar-nav fw-bold fs-5">
-            <a href="#" class="nav-link active mx-2">Présentation</a>
-            <a href="#" class="nav-link mx-2">Compétences</a>
-            <a href="#" class="nav-link mx-2">Carrière</a>
-            <a href="" class="nav-link mx-2">Réalisation</a>
-            <a href="" class="nav-link mx-2">Contact</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggler" aria-controls="toggler" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-md-center" id="toggler">
+          <div class="navbar-nav mb-2 mb-md-0 fw-bold fs-5">
+              <a class="nav-link active mx-2 text-center" aria-current="page" href="#presentation" id="presentation-link">Présentation</a>
+              <a class="nav-link mx-2 text-center" href="#skills" id="skills-link">Compétences</a>
+              <a class="nav-link mx-2 text-center" href="#career" id="career-link">Carrière</a>
+              <a class="nav-link mx-2 text-center" href="#portfolio" id="portfolio-link">Portfolio</a>
+              <a class="nav-link mx-2 text-center" href="#contact" id="contact-link">Contact</a>
           </div>
         </div>
       </div>
     </nav>
   </header>
   <main>
-    <div class="container-fluid bg-primary d-flex justify-content-center align-content-center py-5">
+    <div class="container-fluid bg-primary d-flex justify-content-center align-content-center" id="presentation">
       <div class="card" style="max-width: 30rem">
         <img src="https://via.placeholder.com/400.png?text=Place+Holder" class="card-img-top" height="400px">
         <div class="card-body">
@@ -47,9 +66,9 @@
         d="M0,192L60,208C120,224,240,256,360,229.3C480,203,600,117,720,106.7C840,96,960,160,1080,165.3C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
       </path>
     </svg>
-    <div class="container-fluid">
+    <div class="container-fluid" id="skills">
       <h3 class="my-4">Language de programmation</h3>
-      <div class="row">
+      <div class="row g-3">
         <img src="img/logo/logo-java-medium.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-c-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-cSharp-short.svg" alt="" class="col-auto" height="64px">
@@ -65,7 +84,7 @@
         <img src="img/logo/logo-postgreSQL-short.svg" alt="" class="col-auto" height="64px">
       </div>
       <h3 class="my-4">Framework</h3>
-      <div class="row">
+      <div class="row g-3">
         <img src="img/logo/logo-angular-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-laravel-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-symfony-short.svg" alt="" class="col-auto" height="64px">
@@ -75,13 +94,14 @@
         <img src="img/logo/logo-material-short.svg" alt="" class="col-auto" height="64px">
       </div>
       <h3 class="my-4">Logiciel de traitement</h3>
-      <div class="row">
+      <div class="row g-3">
          <img src="img/logo/logo-googleDrive-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-word-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-powerpoint-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-excel-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-premierPro-short.svg" alt="" class="col-auto" height="64px">
         <img src="img/logo/logo-photoshop-short.svg" alt="" class="col-auto" height="64px">
+         <img src="img/logo/logo-figma-short.svg" alt="" class="col-auto" height="64px">
       </div>
     </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -89,28 +109,42 @@
           d="M0,192L60,202.7C120,213,240,235,360,213.3C480,192,600,128,720,117.3C840,107,960,149,1080,138.7C1200,128,1320,64,1380,32L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
         </path>
       </svg>
-      <div class="container-fluid bg-danger" style="height: 30rem">
+      <div class="container-fluid bg-danger timeline" id="career">
+          <div class="timeline-container timeline-left">
+            <div class="content rounded">
+              <h3> <span class="badge bg-secondary">2019</span> Baccalauréat Scientifique</h3>
+              <p class="fs-5">Lycée Calmette</p>
+              <p style="text-align: justify"><strong>Option ISN</strong> avec Programmation en java et python, mais aussi apprentissage du html5 et css3 à part.</p>
+            </div>
+          </div>
+          <div class="timeline-container timeline-right">
+            <div class="content rounded">
+              <h3><span class="badge bg-secondary"> 2021</span> DUT Informatique</h3>
+              <p class="fs-5">IUT Nice Côte d'Azur</p>
+              <p style="text-align: justify">Formation initiale menant sur l'apprentissage de l'ensemble des types de langage de programmation existants puis <strong> stage en entreprise de 4 mois à UBS Monaco en tant que développeur web</strong>.</p>
+            </div>
+          </div>
       </div>
       <svg height="100%" width="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
         <path
           d="M 0,400 C 0,400 0,200 0,200 C 104.21052631578951,178.57416267942585 208.42105263157902,157.14832535885168 306,169 C 403.578947368421,180.85167464114832 494.52631578947353,225.98086124401914 585,223 C 675.4736842105265,220.01913875598086 765.4736842105265,168.92822966507177 859,168 C 952.5263157894735,167.07177033492823 1049.578947368421,216.3062200956938 1147,230 C 1244.421052631579,243.6937799043062 1342.2105263157896,221.8468899521531 1440,200 C 1440,200 1440,400 1440,400 Z"
           stroke="none" stroke-width="0" fill="#dc3545ff" class="transition-all duration-300 ease-in-out delay-150" transform="rotate(-180 720 200)"></path>
       </svg>
-    <div class="container-fluid py-5">
+    <div class="container-fluid" id="portfolio">
       <div class="row row-cols-3 justify-content-center align-items-center g-5">
-        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
-        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
-        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
-        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
-        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
-        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
+        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
+        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
+        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
+        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
+        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
+        <div class="col-4 d-flex justify-content-center"><a href="#"><img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png" alt="" width="400px"></a></div>
       </div>
     </div>
     <svg height="100%" width="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
       <path d="M 0,400 C 0,400 0,200 0,200 C 93.64285714285714,175.03571428571428 187.28571428571428,150.07142857142858 292,174 C 396.7142857142857,197.92857142857142 512.5,270.75 655,263 C 797.5,255.25 966.7142857142858,166.92857142857142 1102,143 C 1237.2857142857142,119.07142857142858 1338.642857142857,159.53571428571428 1440,200 C 1440,200 1440,400 1440,400 Z" stroke="none" stroke-width="0" fill="#212529ff" class="transition-all duration-300 ease-in-out delay-150">
       </path>
     </svg>
-    <div class="container-fluid bg-dark pb-5 text-light">
+    <div class="container-fluid bg-dark text-light" id="contact" style="padding-bottom: 400px">
         <h2 class="col-12 text-center fs-1 fw-bold mb-5">
           Contact
         </h2>
@@ -138,9 +172,24 @@
     </div>
   </main>
   <footer>
+    <div class="container-fluid bg-dark text-light text-center p-3">
+      <div class="row row-cols-3">
+        <div class="col-3 text-start">
+          Site sous license MIT
+        </div>
+        <div class="col-6 text-center">
+          Réalisé par Alexis De Chiara
+        </div>
+        <div class="col-3 text-end">
+          version 
+        </div>
+      </div>
+    </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <button type="button" id="darkButton" class="btn btn-dark btn-lg rounded-circle position-fixed bottom-0 end-0 m-3"><i class="bi bi-moon"></i></button>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 </body>
 
